<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.bignerdranch.android.bluetoothtestbed.MainActivity">

        <TextView
            android:id="@+id/server_device_info_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actions"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/send_timestamp_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_timestamp"/>

        <Button
            android:id="@+id/restart_server_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart"/>

        <include
            android:id="@+id/view_server_log"
            layout="@layout/view_log"/>

    </LinearLayout>

</layout>